--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ import(mgcv)
 import(paletteer)
 import(patchwork)
 import(purrr)
+import(spatstat)
 import(tibble)
 import(tidyr)
 importFrom(magrittr,"%>%")
