--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,10 @@ import(mgcv)
 import(paletteer)
 import(patchwork)
 import(purrr)
-import(spatstat)
 import(tibble)
 import(tidyr)
 importFrom(magrittr,"%>%")
+importFrom(spatstat.geom,as.im)
 importFrom(spatstat.random,rCauchy)
 importFrom(spatstat.random,rpoispp)
 importFrom(stats,dist)
